--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
   <title>Site Pessoal</title>
   <link rel="stylesheet" href="./CSS/index.css">
 </head>
+
 <body>
   <header>
     <nav class="menu">
@@ -15,27 +17,32 @@
         <li><a href="#">Contato</a></li>
       </ul>
     </nav>
-    <h1 class="site-title">Kauan Emanuel</h1>
-    <h2 class="site-subtitle">jr.do jr.web developer</h2>
+    <div>
+      <h1 class="site-title">Kauan Emanuel</h1>
+      <h2 class="site-subtitle">jr.front-end developer</h2>
+    </div>
+
   </header>
+
   <section>
     <h2>Portfólio</h2>
     <figure>
-      <img class="img-portfolio" src="./img/ecommerce-creditos-s-o-c-i-a-l-c-u-t-unsplash.jpg" alt="eCommerce">
+      <img class="img-portfolio" src="../Imersão.CSS/Imagens/Foto 2.jpg" alt="eCommerce">
       <figcaption>eCommerce</figcaption>
     </figure>
     <figure>
-      <img class="img-portfolio" src="./img/mobile-creditos-nate-grant-unsplash.jpg" alt=">Mobile">
+      <img class="img-portfolio" src="../Imersão.CSS/Imagens/Foto 3.jpg" alt=">Mobile">
       <figcaption>Mobile</figcaption>
     </figure>
     <figure>
-      <img class="img-portfolio" src="./img/webdesign-creditos-domenico-loia-unsplash.jpg" alt="Web design">
+      <img class="img-portfolio" src="../Imersão.CSS/Imagens/Foto 4.jpg" alt="Web design">
       <figcaption>Web design</figcaption>
     </figure>
     <figure>
-      <img class="img-portfolio" src="./img/projpessoais-creditos-hal-gatewood-unsplash.jpg" alt="Projetos pessoais">
+      <img class="img-portfolio" src="../Imersão.CSS/Imagens/Anjos tshirts.jpeg" alt="Projetos pessoais">
       <figcaption>Projetos pessoais</figcaption>
     </figure>
-  </section>   
+  </section>
 </body>
+
 </html>
